fix spacing issue

--- a/dash/src/main.scss
+++ b/dash/src/main.scss
@@ -9,7 +9,7 @@ $theme-colors: (
   "dark": #4C5A78,
 );
 $nav-pills-link-active-bg: #F1F4F9;
-$nav-pills-link-active-color:  #4C5A78;
+$nav-pills-link-active-color:  #2D9CDB;
 $nav-tabs-border-radius: 0;
 
 @import "~bootstrap/scss/bootstrap";
